<resources>
    <string name="app_name">BuyHatke Chat</string>
    <string name="title_activity_registration">Registration</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_registration_welcome">Let\'s get started</string>
    <string name="text_country_code">+91</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_full_name">Name</string>
    <string name="btn_register">REGISTER</string>
    <string name="error_mobile_number">Invalid Mobile</string>
    <string name="error_password">Min 6 Characters</string>
    <string name="error_full_name">Name required</string>
    <string name="title_activity_messenger">MessengerActivity</string>
    <string name="title_chats_tab">CHATS</string>
    <string name="title_groups_tab">GROUPS</string>
    <string name="title_contacts_tab">CONTACTS</string>
    <string name="mtm_accept_cert">Accept Unknown Certificate?</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority.</string>
    <string name="mtm_cert_expired">The server certificate is expired.</string>
    <string name="mtm_accept_servername">Accept Mismatching Server Name?</string>
    <string name="mtm_hostname_mismatch">Server could not authenticate as \&quot;%s\&quot;. The certificate is only valid for:</string>

    <string name="mtm_connect_anyway">Do you want to connect anyway?</string>
    <string name="mtm_cert_details">Certificate details:</string>

    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>

    <string name="mtm_notification">Certificate Verification</string>
</resources>
